# prod-2025-team-backend

./: .dockerignore  .envrc  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  compose.yml  flake.nix  gateway-compose.yml  go.mod  go.sum
dockerfiles/: coworking.goose.Dockerfile  go.Dockerfile  rust.Dockerfile
docs/: README.md
k8s/: admin.yaml  client.yaml  coworking.yaml  gateway.yaml  image.yaml  mail.yaml  notification.yaml  reservation.yaml  seat-lock.yaml
libs/go/compression/: zstd_compressor.go
libs/go/errorz/: errorz.go
libs/rs/convertions/: Cargo.toml
libs/rs/convertions/src/: lib.rs
libs/rs/env-config/: Cargo.toml
libs/rs/env-config/src/: lib.rs
libs/rs/postgres-helper/: Cargo.toml
libs/rs/postgres-helper/src/: cargo.rs  lib.rs
libs/rs/service-helper/: Cargo.toml
libs/rs/service-helper/src/: lib.rs  response.rs
nix/: shell.nix
protos/go/coworking/: coworking.pb.go  coworking_grpc.pb.go
protos/go/image/: image.pb.go  image_grpc.pb.go
protos/go/mail/: mail.pb.go  mail_grpc.pb.go
protos/go/reservation/: reservation.pb.go  reservation_grpc.pb.go
protos/go/seat-lock/: seat-lock.pb.go  seat-lock_grpc.pb.go
protos/rs/: Cargo.toml  build.rs
protos/rs/src/: admin.rs  client.rs  coworking.rs  image.rs  lib.rs  mail.rs  notification.rs  reservation.rs  seat_lock.rs
protos/src/: admin.proto  client.proto  coworking.proto  image.proto  mail.proto  notification.proto  reservation.proto  seat-lock.proto
services/go/coworking/: .env  README.md
services/go/coworking/cmd/: main.go
services/go/coworking/cmd/app/: app.go
services/go/coworking/db/migrations/: 00001_init.sql  00002_integrate_seats_service.sql  00003_change_cost_type.sql  00004_fix_seats.sql
services/go/image/: .env
services/go/image/cmd/: main.go
services/go/image/cmd/app/: app.go
services/go/mail/: .env
services/go/mail/cmd/: main.go
services/go/mail/cmd/app/: app.go
services/go/reservation/: .env  .gitignore
services/go/reservation/cmd/: main.go
services/go/reservation/cmd/app/: app.go
services/go/seat-lock/: .env  README.md
services/go/seat-lock/cmd/: main.go
services/rs/admin/: Cargo.toml
services/rs/admin/.sqlx/: query-10c6faa879654effb4637c43ba6be04341ed61649703dba4f6d72ee841d6d251.json  query-1df295c7877c6f3d233290ee9ba28edeb34d82ad0cf1828be48e864d61922210.json  query-94993baebfabec024e73cf287f102c6237911e3d40dbbf9fbf75eab27e49e7a3.json  query-a716c8b1c35067a8f094d9c2f1823096adfb16c22b1a70a3abd4b559a38231ca.json  query-aae8f695d301d83c421fb09427f6b37811755e0bc7012f1b6486a3fae4f38221.json
services/rs/admin/db/migrations/: 20250301181632_init.up.sql
services/rs/admin/db/queries/: delete.sql  get_by_email.sql  get_by_id.sql  insert.sql  patch.sql
services/rs/admin/src/: lib.rs  main.rs
services/rs/admin/src/models/db/: admin.rs  mod.rs
services/rs/admin/src/service/: change_password.rs  delete.rs  edit.rs  error.rs  get.rs  login.rs  mod.rs  register.rs  validate_token.rs
services/rs/admin/src/utils/: token.rs
services/rs/client/: Cargo.toml  build.rs
services/rs/client/.sqlx/: query-4b5642cf3fb6176994368a78653611527910dbb4bfe989b1a8c267e22cfc75ad.json  query-5b08c2e331f025ddd62b6e7863bcaa3ba7e46dfc2e29bbf3a3e4701455e24001.json  query-64a303e20bb5dd2623d2e743b81aee41fdf00543eed8db4ac9659053916cdc45.json  query-7ca8c6ff97a039d45fd75136adcc5fe4782ec0ef1906866fbc9e0fdfbe690c90.json  query-b5f6f4705308ee6a7c2f4b59dc767c2f6b273f234baff112718c7b071898b0fb.json  query-b6ad62de61c00e4b7d402460d99b0ebe384fabfa7951970525c396efb9c4899b.json
services/rs/client/src/: lib.rs  main.rs
services/rs/gateway/: Cargo.toml
services/rs/gateway/src/: lib.rs  main.rs
services/rs/gateway/src/auth/: middleware.rs  mod.rs
services/rs/gateway/src/models/: date.rs  mod.rs
services/rs/gateway/src/models/dto/: admin.rs  client.rs  coworking.rs  credentials.rs  mod.rs  reservation.rs  seat.rs
services/rs/gateway/src/models/request/: auth.rs  mod.rs
services/rs/gateway/src/models/response/: auth.rs  mod.rs
services/rs/gateway/src/models/url/: admin.rs  client.rs  mod.rs  pagination.rs  reservation.rs  seat.rs
services/rs/gateway/src/routes/: health.rs  mod.rs  not_found.rs  ping.rs
services/rs/gateway/src/routes/admin/: by_id.rs  login.rs  mod.rs  password.rs  register.rs
services/rs/gateway/src/routes/client/: login.rs  mod.rs  password.rs  register.rs  reservations.rs
services/rs/gateway/src/routes/client/by_id/: mod.rs  reservations.rs
services/rs/gateway/src/routes/coworking/: clients.rs  mod.rs
services/rs/gateway/src/routes/coworking/seats/: by_id.rs  mod.rs
services/rs/gateway/src/routes/reservations/: mod.rs
services/rs/gateway/src/routes/reservations/by_id/: confirm.rs  mod.rs
services/rs/gateway/src/utils/: cors.rs  logger.rs  mod.rs  openapi.rs  services.rs  validation.rs
services/rs/notification/: Cargo.toml
services/rs/notification/src/: lib.rs  main.rs
services/rs/notification/src/service/: error.rs  mod.rs  schedule.rs
test-env/: compose.yml  init.sql
(+56 files in other folders)
