[package]
name = "admin"
version = "0.1.0"
edition = "2021"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]

[dependencies]
protos = { workspace = true }
env-config = { workspace = true }
service-helper = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }

argon2 = { workspace = true }
base64 = { workspace = true }
rand_chacha = { workspace = true }
jsonwebtoken = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
prost-types = { workspace = true }

postgres-helper = { workspace = true }
sqlx = { workspace = true }

[build-dependencies]
postgres-helper = { workspace = true }
