[package]
name = "gateway"
version = "0.1.0"
edition = "2021"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]

[dependencies]
protos = { workspace = true }
convertions = { workspace = true }
env-config = { workspace = true}
service-helper = { workspace = true }

actix-web = "4.9"
actix-rt = "2.10"
actix-cors = "0.7"
actix-files = "0.6"
actix-web-lab = "0.23"
actix-web-prom = "0.9"
actix-contrib-logger = "0.1"

tokio = { workspace = true }
futures = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
strum = "0.26"
strum_macros = "0.26"


validator = { version = "0.20", features = ["derive"] }
passwords = "3.1"

utoipa = { version = "5.3", features = ["actix_extras", "chrono", "uuid", "non_strict_integers"] }
utoipa-swagger-ui = { version = "9.0", features = ["actix-web", "vendored"] }
utoipa-actix-web = "0.1"

uuid = { workspace = true }
chrono = { workspace = true }

jsonwebtoken = { workspace = true }

tonic = { workspace = true }
prost-types = { workspace = true }


# tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_28", "uuid_v7"] }
# metrics = "0.24"
# metrics-exporter-prometheus = { version = "0.16", default-features = false }
# opentelemetry = "0.28"
# opentelemetry_sdk = { version = "0.28", features = ["rt-tokio-current-thread"] }
# opentelemetry-otlp = { version = "0.28", features = ["tls-roots"] }
# tracing-opentelemetry = "0.29"
# tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# tracing-bunyan-formatter = "0.3"
# tracing = "0.1"
